--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<!-- saved from url=(0076)file:///C:/Users/ASUS/Documents/Nabilah%20Noor%20Shabrina_XI.4_HTML&CSS.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Nabilah Noor Shabrina</title>
+<html>
+<head>
+	<title>HTML & CSS Pertemuan 2</title>
 </head>
 <body>
-<h1><span style="color: purple">Welcome To My Page.</span></h1>
-<p><span style="color: blue">Get To Know Me!</span></p>
-<p><span style="color: green">My name is <strong>Nabilah Noor Shabrina</strong>. You can call me Bila or Bileh. I am one of the student at Bogor High School of Chemical Analyst. I am 16 years old and in May I am going to be 17 years old.
-	</span></p><p><span>
-		</span></p><p><span style="color: green">I really like everything about music. I always listening music everyday. My hobby is singing. I like to sing everytime i'm in good mood. I can play guitar and keyboard. I also like to made a cover song and then i will post it in my social media.
-			</span></p><p><span style="color: green">I am also a fan of Ardhito Pramono. I like to cover his song. I think his song is really nice to be heard. His song is such a soft song with the unique tone that is very polite to be heard. I very recommended you listen to his song. I suggest you to listen Fine Tsoday, Here We Go Again and 925. That is the song that i really love to hear recently.
-				</span></p><p><span style="color: green">I think thats all from me. I want to say thank you for reading it. I really enjoy doing this assignment. I thought it will be hard but its very fun after i do it.
-					</span></p><p><span>
-		</span></p><table>
-			<tbody><tr>
-				<td>Name</td>
-				<td>:</td> 
-				<td>Nabilah Noor Shabrina</td>
-            </tr><tr>
-            	<td>Class</td>
-            	<td>:</td>
-            	<td>XI.4</td>
-            </tr><tr>
-            	<td>School</td>
-            	<td>:</td>
-            	<td>SMK-SMAK Bogors</td>
-
-</tr></tbody></table></body></html>
+<h1><span style="color:purple">HTML & CSS Pertemuan 2</h1>
+<p><span style="color: blue">Biodata Penulis dan Pengalaman selama PJJ.</p>
+<table border="1">
+<tr>
+	<th>Nama</th>
+	<th>Tempat, Tanggal Lahir</th>
+	<th>Sekolah</th>
+	<th>Hobi</th>
+</tr>
+<tr>
+	<td>Nabilah Noor Shabrina</td>
+	<td>Bogor, 16 Mei 2004</td>
+	<td>SMK SMAK Boogor</td>
+	<td>Bermain gitar, bermain keyboard, menyanyi</td>
+</tr>
+</table>
+<p><tr>
+	<p><dd>Selama diberlakukannya PJJ kurang lebih satu tahun menurut saya sangat berdampak dengan pola belajar siswa. Dijuluki sebagai daring atau <i>Online School</i> dan setiap hari hanya duduk di meja </dd> belajar menatap layar laptop dan semua diakses serba <i>online</i>. Seringkali siswa pun tidak terlalu fokus pada pembelajaran dan akhirnya materi yang disampaikan tidak dapat dipahami dan menyebabkan nilai ujian menurun. Menurut saya hal tersebut dapat terjadi karena kurangnya komunikasi secara langsung dengan guru, tidak dapat berdiskusi langsung dengan teman dan hanya belajar sendirian dirumah yang menyebabkan siswa menjadi jenuh.
+</p>
+<p><tr>
+	<p><dd>Saya sebagai seorang siswa yang juga mengalami PJJ ikut merasakannya. Seringkali merasa mengantuk selama pembelajaran daring karena alur pembelajaran yang sama setiap harinya yaitu </dd><i>Online meeting</i> lalu membuka <i>classroom</i> dan mengerjakan latihan soal. Hal tersebut semakin terasa ketika pembelajaran praktik yang seharusnya berada di laboratorium lalu bermain dengan pereaksi dan alat baru tapi sekarang tidak melainkan hanya melihat video dan mengerjakan laporan.
+</p>
+<p><tr>
+	<p><dd> Walaupun demikian PJJ memiliki sisi positif dan negatifnya. Sisi positif yang dapat diambil menurut saya yaitu kita dapat memiliki waktu luang bersama keluarga, melatih kesabaran, memiliki </dd>lebih banyak waktu untuk isirahat, dll. Sedangkan, sisi negatifnya adalah harus mengeluarkan uang lebih untuk kuota atau <i>WiFi</i> belum lagi kendala jaringan yang tidak stabail dan kurangnya komunikasi langsung dengan guru.
+<tr>
+</p><img src="Nabilah.JPG" width="360"></center>
+</body>
+</html>
