--- a/index.html
+++ b/index.html
@@ -1,15 +1,100 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>HTML & CSS Pertemuan 4</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<div class="box">
-	<img src="Nabilah.JPG" class="box-img" width="360"> 
-	<h1 class="box-h1">Nabilah Noor Shabrina</h1>
-	<h4>Hello, My name is Nabilah Noor Shabrina. You can call me Bila or Bileh. I am one of the student at Bogor High School of Chemical Analyst. I am 16 years old and in May I am going to be 17 years old. I really like everything about music. I always listening music everyday. My hobby is singing. I like to sing everytime i'm in good mood. I can play guitar and keyboard. I also like to made a cover song and then i will post it in my social media.</h4>
-	<h4>I hope we can be friend. So, don't forget to follow me on my instagram @naabilans. Thank you, I will wait for you:)</h4>
-</div>
-</body>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+
+    <!-- My CSS-->
+    <link rel="stylesheet" href="style.css" />
+
+    <title>My Page|Nabilah Nooor S</title>
+  </head>
+  <body id="home">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background-color: #a535b4f5">
+      <div class="container">
+        <a class="navbar-brand" href="#">Nabilah Noor</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#About">About</a>
+                <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" aria-current="page"
+               href="galeri.html">Gallery</a>
+               <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" aria-current="page"
+               href="biodata.html">Biodata</a>
+                </li>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- akhir navbar -->
+
+    <!-- Jumbotron-->
+    <section class="jumbotron text-center">
+      <img src="img/Nabilah Noor.jpeg" alt="Nabilah Noor Shabrina" width="180" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 fs-2 text-dark fw-bold">Nabilah Noor Shabrina</h1>
+      <p class="lead">Student</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,192L48,197.3C96,203,192,213,288,208C384,203,480,181,576,160C672,139,768,117,864,128C960,139,1056,181,1152,197.3C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- akhir Jumbotron-->
+
+    <!-- About -->
+    <section id="About">
+      <div class="container">
+        <div class="row text-center mb-4">
+          <div class="col">
+            <h2>About Me</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center fs-5 text-center">
+          <div class="col-4">
+            <p>
+              My name is Nabilah Noor Shabrina. You can call me Bila or Bileh. I am one of the student at Bogor High School of Chemical Analyst. I am 16 years old and in May I am going to be 17 years old. I really like everything about
+              music. I always listening music everyday. My hobby is singing. I like to sing everytime i'm in good mood. I can play guitar and keyboard. I also like to made a cover song and then i will post it in my social media.
+            </p>
+          </div>
+          <div class="col-4">
+            <p>
+              I am also a fan of Ardhito Pramono. I like to cover his song. I think his song is really nice to be heard. His song is such a soft song with the unique tone that is very polite to be heard. I very recommended you listen to his
+              song. I suggest you to listen Fine Tsoday, Here We Go Again and 925. That is the song that i really love to hear recently.
+            </p>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="rgb(206, 118, 228)"
+          fill-opacity="1"
+          d="M0,160L60,165.3C120,171,240,181,360,197.3C480,213,600,235,720,224C840,213,960,171,1080,154.7C1200,139,1320,149,1380,154.7L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir About -->
+
+    <!-- Footer -->
+    <footer style="background-color: mediumorchid" class="text-white text-center pb-5">
+      <p>Created by <a href="https://instagram.com/naabilans?utm_medium=copy_link" class="text-white fw-bold text-center">Nabilah Noor Shabrina</a></p>
+    </footer>
+    <!-- Akhir Footer -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  </body>
 </html>
