--- a/galeri.html
+++ b/galeri.html
@@ -129,3 +129,35 @@
   </div>
 </section>
 <!-- Akhir Gallery -->
+
+<!-- navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark shadow fixed-top" style="background-color: #a535b4f5">
+  <div class="container">
+    <a class="navbar-brand" href="#">Nabilah Noor</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" aria-current="page"
+         href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" aria-current="page"
+           href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" aria-current="page"
+           href="galeri.html">Gallery</a>
+           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" aria-current="page"
+           href="biodata.html">Biodata</a>
+            </li>
+          
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- akhir navbar -->
